# delete

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml
src/theTrial/: __init__.py  app.py  cli.py
src/theTrial/kafka/: __init__.py  consumer.py  producer.py
src/theTrial/settings/: __init__.py
src/theTrial/utils/: inspect_function.py  log.py
tests/: conftest.py  test_app.py  test_cli.py  test_kafka_consumer.py  test_kafka_producer.py  test_log.py  test_settings.py  test_utils.py
