[metadata]
name = the_trial
version = attr: src.theTrial.__version__
description = A Python microframework for easy communication with Kafka.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/donMichaelL/theTrial
author = Michael Loukeris
author_email = mloukeris@di.uoa.gr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
keywords = kafka, microframework, python, producer, consumer
project_urls =
    Twitter = https://twitter.com/MichaelLoukeris

[options]
packages = find:
install_requires =
    click
    confluent-kafka
    environs
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    theTrial = theTrial.cli:main

[flake8]
max-line-length = 88

[coverage:run]
branch = True
parallel = True
source =
    theTrial

[coverage:report]
show_missing = True
